Working implementation of the astar algorithm, I'm now in the position of being able to work on the heuristics to alter it's behaviour.